--- a/templates/about.html
+++ b/templates/about.html
@@ -49,11 +49,11 @@
                        class="mini-social reddit"
                        target="_blank" rel="noopener"
                        onclick="trackSocialClick('reddit', 'about_page')">Reddit</a>
-                    <a href="https://facebook.com/gorillacamping"
-                       class="mini-social facebook"
-                       target="_blank" rel="noopener"
-                       onclick="trackSocialClick('facebook', 'about_page')">Facebook</a>
-                    <a href="https://www.tiktok.com/@gorillacamping"
+                      <a href="https://www.facebook.com/profile.php?id=61577334442896"
+                      class="mini-social facebook"
+                      target="_blank" rel="noopener"
+                      onclick="trackSocialClick('facebook', 'about_page')">Facebook</a>
+                       <a href="https://www.tiktok.com/@gorillacamping"
                        class="mini-social tiktok"
                        target="_blank" rel="noopener"
                        onclick="trackSocialClick('tiktok', 'about_page')">TikTok</a>
