--- a/templates/about.html
+++ b/templates/about.html
@@ -45,7 +45,7 @@
             <div class="social-cta">
                 <p><strong>Follow the guerilla movement:</strong></p>
                 <div class="social-mini">
-                    <a href="https://www.reddit.com/r/gorillacamping"
+                    <a href="https://www.reddit.com/r/gorrilacamping"
                        class="mini-social reddit"
                        target="_blank" rel="noopener"
                        onclick="trackSocialClick('reddit', 'about_page')">Reddit</a>
