--- a/templates/blog.html
+++ b/templates/blog.html
@@ -9,7 +9,7 @@
     <ul class="blog-list">
         {% for post in posts %}
             <li>
-                <a href="{{ url_for('blog_post', slug=post['slug']) }}">
+                <a href="{{ url_for('post', slug=post['slug']) }}">
                     {{ post['title'] }}
                 </a>
                 <small>Posted on {{ post['created_at'].strftime('%Y-%m-%d') }}</small>
