--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <footer class="footer">
         <p>&copy; {{ now.year }} Gorilla Camping. All Rights Reserved.</p>
-        <p><a href="{{ url_for('privacy') }}">Privacy Policy</a> | <a href="{{ url_for('terms') }}">Terms of Service</a></p>
+        <p>
+            <a href="{{ url_for('privacy') }}">Privacy Policy</a> | 
+            <a href="{{ url_for('as_is') }}">Terms of Service</a>
+        </p>
     </footer>
 </body>
 </html>
